--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <input type="checkbox" id="switch" />
             <label for="switch">
               <span class="switch-text">Вход</span>
-              <span class="switch-text text2">Регистрация</span>
+              <span class="switch-text">Регистрация</span>
             </label>
           </div>
           <h1>Вход</h1>
@@ -48,47 +48,37 @@
               />
               <label for="check">Запомнить меня</label>
             </div>
-            <div class="under-pass-link">
-              <a href="#">Забыли пароль?</a>
-            </div>
+            <a class="under-pass-link" href="#">Забыли пароль?</a>
           </div>
-          <div class="enter">
-            <input type="submit" id="enter" value="Войти" />
-          </div>
+          <input class="enter" type="submit" id="enter" value="Войти" />
           <div class="registration">
-            <div>
-              <span>Еще нет аккаунта? </span>
-            </div>
-            <div>
-              <a href="#">Зарегистрироваться</a>
-            </div>
+            <p>Еще нет аккаунта?</p>
+            <a href="#">Зарегистрироваться</a>
           </div>
-          <h2>Или войдите через</h2>
-          <div>
-            <ul class="icons-list">
-              <li>
-                <a href="#">
-                  <svg class="icon">
-                    <use href="images/sprite.svg#facebook"></use>
-                  </svg>
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  <svg class="icon">
-                    <use href="images/sprite.svg#insta"></use>
-                  </svg>
-                </a>
-              </li>
-              <li>
-                <a href="#">
-                  <svg class="icon">
-                    <use href="images/sprite.svg#link"></use>
-                  </svg>
-                </a>
-              </li>
-            </ul>
-          </div>
+          <p class="enter-media">Или войдите через</p>
+          <ul class="icons-list">
+            <li>
+              <a href="#">
+                <svg class="icon">
+                  <use href="images/sprite.svg#facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <svg class="icon">
+                  <use href="images/sprite.svg#insta"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <svg class="icon">
+                  <use href="images/sprite.svg#link"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
         </div>
       </form>
     </div>
